# DataPipeline

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  run_tests.py  seed_db.py  spec.md  test_dashboard.py  test_streamlit.py
.github/workflows/: ci.yml  schedule.yml
.streamlit/: secrets.toml.example
dashboard/: api.py  app.py  queries.py  streamlit_app.py
dashboard/static/: style.css
dashboard/templates/: base.html  index.html
etl/: __init__.py  __main__.py  cleanup.py  config.py  export.py  notify.py  process.py  scheduler.py  scrape.py
spec/: plan-mejoras.md
spec/constitution/: mission.md  roadmap.md  tech-stack.md
spec/features/001-etl-core/: plan.md  spec.md  tasks.md
spec/features/002-dashboard/: plan.md  spec.md
spec/features/003-docker-ci/: plan.md  spec.md
spec/features/005-streamlit/: spec.md
spec/features/006-backlog-plan/: plan.md  spec-007.md  spec.md
spec/features/007-dedup-incremental/: spec.md
spec/features/008-webhook-alerts/: spec.md
spec/features/009-export-parquet/: spec.md
spec/features/010-pandas-avanzado/: spec.md
tests/: test_api.py  test_cleanup.py  test_cli.py  test_concurrency.py  test_config.py  test_dedup.py  test_edge_cases.py  test_export.py  test_integration.py  test_notify.py  test_pandas_advanced.py  test_process.py  test_queries.py  test_scheduler.py  test_scrape.py
