[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "datapipeline"
version = "0.1.0"
description = "ETL pipeline: web scraping → processing → visualization"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]
dashboard = ["streamlit>=1.30", "plotly>=5.18", "pandas>=2.0"]

[project.scripts]
etl = "etl.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
